--- a/app.json
+++ b/app.json
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.andresazuim.NaQuebrada"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "b36b33a3-ce1d-40b5-9453-7d9ccfbe1c0b"
+      }
     }
   }
 }
